# jekko-memory

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Justfile  MEMORY_SYSTEM_LEVELUP.md  README.md  rust-toolchain.toml
agent/: JANKURAI_STANDARD.md  audit-policy.toml  boundaries.toml  generated-zones.toml  jankurai-install.toml  owner-map.json  proof-lanes.toml  repo-score.json  repo-score.md  security-policy.toml  standard-version.toml  test-map.json  tool-adoption.toml
contracts/: AGENTS.md  README.md
crates/agent-search/: Cargo.toml
crates/agent-search/src/: config.rs  dedupe.rs  extract.rs  lib.rs  parallel.rs  router.rs  safety.rs  store.rs  types.rs
crates/agent-search/src/providers/: arxiv.rs  brave.rs  crossref.rs  exa.rs  firecrawl.rs  gdelt.rs  github.rs  jina.rs  mod.rs  openalex.rs  pubmed.rs  searxng.rs  semantic_scholar.rs  tavily.rs  unpaywall.rs
crates/agent-search/src/types/: core.rs  policies.rs  provider.rs  request.rs  response.rs
crates/agent-search/tests/: dedupe.rs  extract.rs  live_ignored.rs  parallel.rs  provenance.rs  provider_fixtures.rs  router.rs  safety.rs  types.rs
crates/cogcore/: Cargo.toml  rust-toolchain.toml
crates/cogcore/src/: budget.rs  canary.rs  concept.rs  config.rs  consolidate.rs  consolidate_tests.rs  fsrs.rs  hash.rs  hebb.rs  index.rs  ledger.rs  lib.rs  time.rs  topic.rs
crates/cogcore/src/core/: consolidate.rs  mod.rs  observe.rs  recall.rs  recall_render.rs  state.rs  support.rs  tests.rs
crates/cogcore/src/ingest/: equation.rs  mod.rs  paper.rs  paper_json.rs  paper_json_parse.rs  paper_json_support.rs  paper_support.rs  theorem.rs
crates/cogcore/tests/: benchmark_smoke.rs  hardening_converges.rs  scale_10k.rs  trait_smoke.rs
crates/qbank-builder/: Cargo.toml
crates/qbank-builder/src/: agent_json.rs  bank.rs  bank_io.rs  bank_validation.rs  core_types.rs  fixture.rs  full_text.rs  full_text_import.rs  full_text_import_detail.rs  full_text_import_detail_support.rs  lib.rs  lib_cogcore.rs  main.rs  paper_tournament.rs  schema.rs  tests.rs  trial_schema.rs
crates/qbank-builder/src/cli/: bank.rs  discover.rs  mod.rs  tournament.rs  tournament_audit.rs  util.rs  workflow.rs
crates/qbank-builder/src/paper_tournament/: build.rs  execution.rs  gating.rs  hashish.rs  live.rs  live_candidate.rs  live_outcome.rs  live_outcome_support.rs  live_runner.rs  live_runner_call.rs  live_runner_http.rs  live_runner_parse.rs  live_runner_support.rs  live_write.rs  preflight.rs  prompt.rs  prompt_support.rs  provenance.rs  schemas.rs  selection.rs  summary.rs  summary_reports.rs
db/: AGENTS.md  README.md
docs/: agent-native-standard.md  architecture.md  boundaries.md  cost-budgets.md  release.md  testing.md
examples/memory-benchmark/: Cargo.toml  README.md
examples/memory-benchmark/data/fixture-paper-bank/: README.md
examples/memory-benchmark/data/fixture-paper-bank/manifests/: latest.json
examples/memory-benchmark/data/real-paper-bank/: README.md
examples/memory-benchmark/data/real-paper-bank/manifests/: latest.json
examples/memory-benchmark/src/: case.rs  chase_report.rs  fixture.rs  grow_curriculum.rs  hash.rs  json.rs  json_parser.rs  lib.rs  lib_tests.rs  memory_api.rs  population_memory.rs  qbank_hash.rs  report.rs  result.rs  runner.rs  runner_generated.rs  runner_support.rs  scorer.rs  triangulate.rs  types.rs
examples/memory-benchmark/src/adapters/: baseline.rs  cogcore_adapter.rs  mod.rs  reference_claim_skeptic.rs  reference_context_pack.rs  reference_evidence_ledger.rs
examples/memory-benchmark/src/candidates/: compression_first.rs  hybrid_index.rs  ledger_first.rs  mod.rs  shared.rs  skeptic_dataset.rs  temporal_graph.rs
examples/memory-benchmark/src/candidates/arena/: lane_00.rs  lane_01.rs  lane_02.rs  lane_03.rs  lane_04.rs  lane_05.rs  lane_06.rs  lane_07.rs  lane_08.rs  lane_09.rs  lane_10.rs  lane_11.rs  lane_12.rs  lane_13.rs  lane_14.rs  lane_15.rs  lane_16.rs  lane_17.rs  lane_18.rs  lane_19.rs  mod.rs
examples/memory-benchmark/src/corpus/: english.rs  equations.rs  mod.rs  novaq.rs  privacy.rs  procedural.rs  real_papers.rs  theorems.rs
examples/memory-benchmark/src/corpus/real_papers/: json_helpers.rs  model.rs  parse.rs  parse_structs.rs  parse_support.rs  run.rs  score.rs  tests.rs  validation.rs  validation_checks.rs  validation_order.rs  validation_support.rs
examples/memory-benchmark/src/fixture/: data.rs
examples/memory-benchmark/src/oracle/: finite_model.rs  mod.rs  privacy.rs  provenance.rs  temporal.rs  theorem_dag.rs  unit.rs  workflow.rs
examples/memory-benchmark/src/scoring/: axes.rs  bootstrap.rs  economics.rs  gates.rs  mod.rs  support.rs
examples/memory-benchmark/tests/: arena_lanes.rs  canary_redaction.rs  generated_suite.rs  hardening_timesteps.rs  metamorphic.rs  oracle_temporal.rs  oracle_theorem_dag.rs  oracle_unit.rs  population_report_chase.rs  privacy_transform.rs  real_papers.rs  reference_diversity.rs  report_schema.rs
ops/: AGENTS.md
src/: lib.rs
tools/autoresearch/: Cargo.toml
tools/autoresearch/src/: llm.rs  main.rs  template.rs
tools/autoresearch/src/proposer/: genetic.rs
(+38 files in other folders)
