[package]
name = "agent-search"
version = "1.0.0"
edition = "2021"
description = "Multi-provider agentic search system with privacy-first routing, parallel execution, and provenance tracking"

[features]
default = []
bm25 = ["dep:tantivy"]

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tantivy = { version = "0.22", optional = true }
futures = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing = "0.1"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
