[package]
name = "cogcore"
version = "0.1.0"
edition = "2021"
publish = false
description = "Cognitive memory core — deterministic, append-only, zero default dependencies"

[lib]
path = "src/lib.rs"

[features]
default = []
# Faster hash collision resistance. Adds blake3 dependency. Off by default to
# preserve byte-stable hash compatibility with the FNV-1a baseline.
experimental_blake3 = []
# Approximate nearest-neighbor index for concept centroids. Adds hnsw_rs.
# Off by default; cogcore ships with BM25-lite + graph rerank.
experimental_hnsw = []

# Zero default dependencies. Standard library only.
# Determinism: FNV-1a hashing, sorted BTreeMap keys, no clock/random sources.
[dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.bench]
debug = true

# memory-benchmark is only pulled into the test target so we can exercise
# the adapter wrapper end-to-end. Cargo permits cycles through
# dev-dependencies because they are not part of the lib build graph.
[dev-dependencies]
memory_benchmark = { path = "../../examples/memory-benchmark" }
