[package]
name = "qbank-builder"
version = "0.1.0"
edition = "2021"
publish = false
description = "Local paper QBank builder for memory-benchmark real-paper suites"

[[bin]]
name = "qbank"
path = "src/main.rs"

[dependencies]
agent-search = { path = "../agent-search" }
regex = "1"
reqwest = { version = "0.12.28", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tempfile = "3"
