[package]
name = "memory_benchmark"
version = "0.1.0"
edition = "2021"
publish = false
description = "Memory benchmark: deterministic, zero-dependency harness for advanced cognitive memory systems"

[lib]
path = "src/lib.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"

[[bin]]
name = "prompt_reduce"
path = "src/bin/prompt_reduce.rs"

[[bin]]
name = "dump_tasks"
path = "src/bin/dump_tasks.rs"

[[bin]]
name = "verify_determinism"
path = "src/bin/verify_determinism.rs"

[[bin]]
name = "population_report"
path = "src/bin/population_report.rs"

[[bin]]
name = "chase_reduce"
path = "src/bin/chase_reduce.rs"

[[bin]]
name = "generate_suite"
path = "src/bin/generate_suite.rs"

[[bin]]
name = "qbank_validate"
path = "src/bin/qbank_validate.rs"

[[bin]]
name = "score_mix"
path = "src/bin/score_mix.rs"

[[bin]]
name = "cogcore_bench"
path = "src/bin/cogcore_bench.rs"

# Zero external runtime dependencies (no crates.io).
# Workspace-internal: cogcore (zero default deps; standard library only).
# Determinism: FNV-1a (hash.rs), hand-rolled JSON (json.rs), sorted keys throughout.
[dependencies]
cogcore = { path = "../../crates/cogcore" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
